--- a/aditi/FET_Mini_Project/admin_cards.html
+++ b/aditi/FET_Mini_Project/admin_cards.html
@@ -111,9 +111,8 @@
                 <div class="card" style="width: 400px;">
                     <img src="html-logo.jpg" class="card-img-top" alt="===">
                         <div class="card-body">
-                            <h5 class="card-title">Crud Operation-4</h5>
-                            <p class="card-text">Results of Participants</p>
-                            <a href="one.html" class="btn btn-warning">Go somewhere</a>
+                            
+                            <a href="one.html" class="btn btn-warning">View</a>
                         </div>
                 </div>
             </div>
