--- a/aditi/FET_Mini_Project/admin_cards.html
+++ b/aditi/FET_Mini_Project/admin_cards.html
@@ -86,7 +86,7 @@
                     <img src="logo_c++.jpg" class="card-img-top" alt="==="></div>
                     <div class="card-body">
                         
-                        <a href="one.html" class="btn btn-warning">Go somewhere</a>
+                        <a href="one.html" class="btn btn-warning">View</a>
                     </div>
                 </div>
             </div>
