section and themes

--- a/Kaustubh/src/html/profile.html
+++ b/Kaustubh/src/html/profile.html
@@ -6,7 +6,8 @@
         <center>
             <h1> IS PROFILE</h1>
 
-            <button id="profile_button">CLICK</button>
+            <button id="profile_button">CLICK ME</button>
+            <button id="profile_button">CLICK ME 2</button>
         </center>
     </body>
 </html>
