--- a/Kaustubh/src/html/index.html
+++ b/Kaustubh/src/html/index.html
@@ -7,7 +7,13 @@
     </head>
     <body>
         <header class="header">
-            <h1>HEADER</h1>
+            <center><h1>HEADER</h1></center>
+            <!-- <button id="theme">dark theme</button> -->
+            <label class="switch">
+                <input type="checkbox" id="theme">
+                <span class="slider round" ></span>
+              </label>
+            <hr>
         </header>
         <nav class="navbar">
 
