table button problem

--- a/Amir/storage1/table.html
+++ b/Amir/storage1/table.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <table></table>
+    <button>b</button>
+    <h2></h2>
     <!-- <script>
     var rowdata = ['#',"Questions","1","2","3","4","Answer","Edit","Delete"];
       function tableCreate() {
