Light/dark theme change

--- a/Kaustubh/src/html/nav_bar.html
+++ b/Kaustubh/src/html/nav_bar.html
@@ -8,16 +8,16 @@
     <body>
         <nav class="nav_bar">
             <ul class="nav flex-column">
-                <button class="nav-item" id="home">
+                <button class="nav-item btn btn-light" id="home">
                   Home
                 </button>
-                <button class="nav-item" id="profile">
+                <button class="nav-item btn btn-light" id="profile">
                  Profile
                 </button>
-                <button class="nav-item">
+                <button class="nav-item btn btn-light">
                   Total Quiz Attempted
                 </button>
-                <button class="nav-item">
+                <button class="nav-item btn btn-light">
                  Past Performance
                 </button>
               </ul>
