--- a/aditi/FET_Mini_Project/admin_cards.html
+++ b/aditi/FET_Mini_Project/admin_cards.html
@@ -25,7 +25,7 @@
 
     <nav class="nav_bar">
         <ul class="nav flex-column">
-            <a href="admin-profile.html" class="nav-item btn btn-info" id="profile">
+            <a href="admin_profile.html" class="nav-item btn btn-info" id="profile">
                 Profile</a>
             <a href="quiz-documentation.txt" class="nav-item btn btn-info" id="documentation">
                 Documentation</a>
