--- a/aditi/FET_Mini_Project/admin_profile.html
+++ b/aditi/FET_Mini_Project/admin_profile.html
@@ -18,7 +18,7 @@
 
 
     <div class="profile-container ">
-        <h2> <span class="badge bg-secondary">Admin Profile</span></h2>
+        <h2> <span class="badge bg-primary">Admin Profile</span></h2>
 
         <!-- admin name -->
 
