change in cards

--- a/aditi/FET_Mini_Project/user_cards.html
+++ b/aditi/FET_Mini_Project/user_cards.html
@@ -38,6 +38,9 @@
                 <button class="nav-item btn btn-info">
                  Past Performance
                 </button>
+                <button class="nav-item btn btn-info">
+                    Log Out
+                   </button>
               </ul>
         </nav>   
     
