--- a/aditi/FET_Mini_Project/admin_cards.html
+++ b/aditi/FET_Mini_Project/admin_cards.html
@@ -44,7 +44,7 @@
     </nav>
 
     <section>
-      <div class="container">
+      <div class="container" id="card-one">
         <div class="row gx-5 gy-5">
           <div class="col-lg-6 col-sm-12">
             <div class="card">
@@ -59,7 +59,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-sm-12">
+          <div class="col-lg-6 col-sm-12" id="card-two">
             <div class="card">
               <img src="Frame 1c++.png" class="card-img-top" alt="===" />
               <div class="card-body">
@@ -71,7 +71,7 @@
           </div>
         </div>
 
-        <div class="row gx-5 gy-5">
+        <div class="row gx-5 gy-5" id="card-three">
           <div class="col-lg-6 col-sm-12">
             <div class="card">
               <img src="Frame 1java.png" class="card-img-top" alt="===" />
@@ -83,7 +83,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-sm-12">
+          <div class="col-lg-6 col-sm-12" id="card-four">
             <div class="card">
               <img src="Frame 1html5.png" class="card-img-top" alt="===" />
               <div class="card-body">
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="category-button">
+        <div class="category-button" id="category-button">
             <a href="one.html" class="btn btn-warning">Add new Test Category</a>
           </div>
       </div>
