--- a/aditi/FET_Mini_Project/admin_profile.html
+++ b/aditi/FET_Mini_Project/admin_profile.html
@@ -28,19 +28,19 @@
         <!-- for email-->
         <div class="email">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" id="admin-email" placeholder="name@example.com">
         </div><br>
 
         <!-- Mention updation performed -->
         <div class="message">
             <label for="exampleFormControlTextarea1" class="form-label">Mention the Updations performed in Quiz!</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" id="admin-message" rows="3"></textarea>
         </div>
 
         <!-- for contact number -->
         <div class="contact">
             <label for="exampleFormControlInput1" class="form-label">Contact Number :</label>
-            <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="xxxxxxxxxx">
+            <input type="number" class="form-control" id="admin-contact" placeholder="xxxxxxxxxx">
         </div><br>
 
 
@@ -68,13 +68,13 @@
             });
         </script>
         <div class="current-pwd">
-            <label for="exampleDropdownFormPassword2" class="form-label">Current Password</label>
-            <input type="password" class="form-control" id="exampleDropdownFormPassword2" placeholder="Password">
+            <label for="current password" class="form-label">Current Password</label>
+            <input type="password" class="form-control" id="admin-pwd" placeholder="Password">
         </div><br>
 
         <div class="new-pwd">
-            <label for="exampleDropdownFormPassword2" class="form-label">New Password</label>
-            <input type="password" class="form-control" id="exampleDropdownFormPassword2" placeholder="Password"><br>
+            <label for="new password" class="form-label">New Password</label>
+            <input type="password" class="form-control" id="admin-new-pwd" placeholder="Password"><br>
             <a href="one.html" class="btn btn-success">Submit Password</a>
 
         </div>
