--- a/aditi/FET_Mini_Project/admin_cards.html
+++ b/aditi/FET_Mini_Project/admin_cards.html
@@ -29,15 +29,14 @@
     <nav class="nav_bar">
       <ul class="nav flex-column">
         <a href="admin_profile.html" class="nav-item btn btn-info" id="profile">
-          Profile</a
-        >
-        <a
-          href="quiz-documentation.txt"
+          Profile</a>
+        
+          <a href="quiz-documentation.txt"
           class="nav-item btn btn-info"
-          id="documentation"
-        >
-          Documentation</a
-        >
+          id="documentation">
+          Documentation</a>
+
+        <button class="nav-item btn btn-info">Most Attempted Test</button>
         <button class="nav-item btn btn-info">FAQ</button>
         <button class="nav-item btn btn-info">Log Out</button>
       </ul>
