--- a/aditi/FET_Mini_Project/user_cards.html
+++ b/aditi/FET_Mini_Project/user_cards.html
@@ -33,10 +33,19 @@
                  Profile
                 </button>
                 <button class="nav-item btn btn-info">
+                    Past Performance
+                   </button>
+                   <button class="nav-item btn btn-info">
+                    Rankikng
+                   </button>
+                   <button class="nav-item btn btn-info">
+                   Most Attempted Test
+                   </button>
+                <button class="nav-item btn btn-info">
                   Total Quiz Attempted
                 </button>
                 <button class="nav-item btn btn-info">
-                 Past Performance
+                 Contact Us
                 </button>
                 <button class="nav-item btn btn-info">
                     Log Out
