--- a/Amir/backend/storage1/table.html
+++ b/Amir/backend/storage1/table.html
@@ -37,7 +37,7 @@
       }
       tableCreate();
     </script> -->
-    <!-- <script src="storage.js"></script> -->
-    <script src="cat.js"></script>
+    <script src="storage.js"></script>
+    <!-- <script src="cat.js"></script> -->
   </body>
 </html>
