--- a/aditi/FET_Mini_Project/admin_profile.html
+++ b/aditi/FET_Mini_Project/admin_profile.html
@@ -33,7 +33,7 @@
 
         <!-- Mention updation performed -->
         <div class="message">
-            <label for="exampleFormControlTextarea1" class="form-label">Mention the Updations performed in Quiz!</label>
+            <label for="Message box" class="form-label">Mention the Updations performed in Quiz!</label>
             <textarea class="form-control" id="admin-message" rows="3"></textarea>
         </div>
 
