--- a/aditi/FET_Mini_Project/admin_cards.html
+++ b/aditi/FET_Mini_Project/admin_cards.html
@@ -31,10 +31,7 @@
         <a href="admin_profile.html" class="nav-item btn btn-info" id="profile">
           Profile</a>
         
-          <a href="quiz-documentation.txt"
-          class="nav-item btn btn-info"
-          id="documentation">
-          Documentation</a>
+          <a href="quiz-documentation.txt"     class="nav-item btn btn-info"    id="documentation">   </a>Documentation</a>
 
         <button class="nav-item btn btn-info">Most Attempted Test</button>
         <button class="nav-item btn btn-info">FAQ</button>
