--- a/aditi/FET_Mini_Project/user_cards.html
+++ b/aditi/FET_Mini_Project/user_cards.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>User Dashboard</title>
     <link rel="stylesheet" href="user_cards.css">
  
 </head>
@@ -37,7 +37,7 @@
                     Past Performance
                    </button>
                    <button class="nav-item btn btn-info">
-                    Rankikng
+                    Ranking
                    </button>
                    <button class="nav-item btn btn-info">
                    Most Attempted Test
