Dynamic card creation in index.js

--- a/Kaustubh/src/html/profile.html
+++ b/Kaustubh/src/html/profile.html
@@ -1,13 +1,14 @@
 <html>
     <head>
-
+        <script defer src="../lib/jquery-3.5.1.js"></script>
+        <script defer src="../js/profile.js"></script>
     </head>
     <body>
         <center>
             <h1> IS PROFILE</h1>
 
             <button id="profile_button">CLICK ME</button>
-            <button id="profile_button">CLICK ME 2</button>
+            <button id="profile_button2">CLICK ME 2</button>
         </center>
     </body>
 </html>
