--- a/Kaustubh/src/html/categories.html
+++ b/Kaustubh/src/html/categories.html
@@ -1,5 +1,5 @@
-<!DOCTuser.html lang="en">
-
+<!DOCTYPE html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,6 @@
 
     <div class=".container-fluid">
 
-
         <div class="row gx-1 gy-1">
             <div class="col-lg-6  col-sm-12 gy-1">
                 <div class="card">
@@ -35,7 +34,7 @@
                         <p class="card-text">C is a general-purpose, procedural computer programming language supporting
                             structured programming, lexical variable scope, and recursion, with a static type system. By
                             design, C provides constructs that map efficiently to typical machine instructions.</p>
-                        <a href="user.html" class="btn btn-light crdbtn">Take Test</a>
+                        <button id="c_testsets"class="btn btn-light crdbtn">Take Test</button>
                     </div>
 
                 </div>
@@ -48,7 +47,7 @@
                     <div class="card-body">
                         <h5 class="card-title">C++</h5>
                         <p class="card-text">Test Your Knowledge On C++</p>
-                        <a href="user.html" class="btn btn-light crdbtn">Take Test</a>
+                        <button id="c++_testsets" class="btn btn-light crdbtn">Take Test</button>
                     </div>
                 </div>
             </div>
@@ -63,7 +62,7 @@
                     <div class="card-body">
                         <h5 class="card-title">JAVA</h5>
                         <p class="card-text">Test Your Knowledge On</p>
-                        <a href="user.html" class="btn btn-light crdbtn">Take Test</a>
+                        <button id="java_testsets" class="btn btn-light crdbtn">Take Test</button>
                     </div>
                 </div>
             </div>
@@ -76,7 +75,7 @@
                     <div class="card-body">
                         <h5 class="card-title">HTML</h5>
                         <p class="card-text">Test Your Knowledge On HTML</p>
-                        <a href="user.html" class="btn btn-light crdbtn">Take Test</a>
+                        <button id="html_testsets" class="btn btn-light crdbtn">Take Test</button>
                     </div>
                 </div>
             </div>
@@ -88,4 +87,5 @@
 
 
 
-</body>user.html>
+</body>
+</html>
