--- a/Kaustubh/src/html/categories.html
+++ b/Kaustubh/src/html/categories.html
@@ -26,7 +26,7 @@
     <div class=".container-fluid">
 
         <div class="row gx-1 gy-1">
-            <div class="col-lg-6  col-sm-12 gy-1">
+              <!-- <div class="col-lg-6  col-sm-12 gy-1"> 
                 <div class="card">
                     <img src="../images/c.png" class="card-img-top" alt="===">
                     <div class="card-body">
@@ -78,7 +78,7 @@
                         <button id="html_testsets" class="btn btn-light crdbtn">Take Test</button>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
     </div>
