minor changes in user profile

--- a/Anushka/src/html/profile.html
+++ b/Anushka/src/html/profile.html
@@ -22,17 +22,17 @@
     <div class="profile-container ">
         <h2> <span class="badge bg-primary">User Profile</span></h2>
 
-        <!-- admin name -->
+        <!-- user name -->
 
 
 
 
-        <!-- for email-->
+        <!-- for name-->
         <div class="name">
             <label for="exampleFormControlInput1" class="form-label">Name :</label>
             <!-- <input type="email" class="form-control " id="admin-email" placeholder="name@example.com"> -->
         </div><br>
-
+        <!-- for email-->
         <div class="email">
             <label for="exampleFormControlInput1" class="form-label">Email address :</label>
             <!-- <input type="email" class="form-control " id="admin-email" placeholder="name@example.com"> -->
