--- a/nitya/quiz111/quiz11.html
+++ b/nitya/quiz111/quiz11.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="./quiz11.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
-    <link rel="stylesheet" href="../css\quiz11.css">
+    
 </head>
 
 <body>
@@ -62,7 +63,7 @@
 
 
     <script src="https://kit.fontawesome.com/d56261bbb9.js"></script>
-    <script src="../javascript\quiz11.js"></script>
+    <script src="./quiz11.js"></script>
 </body>
 
 </html>
