--- a/Amir/Quiz_home/quizhome.html
+++ b/Amir/Quiz_home/quizhome.html
@@ -9,7 +9,7 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="quizhome.js"></script>
+    <script defer src="./quizhome.js"></script>
     <title>JS Quiz</title>
   </head>
   <body>
