--- a/Quiz_App/g5/html/user_cards.html
+++ b/Quiz_App/g5/html/user_cards.html
@@ -9,7 +9,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>User Dashboard</title>
-    <link rel="stylesheet" href="user_cards.css">
+    <link rel="stylesheet" href="../css/user_cards.css">
  
 </head>
 
@@ -62,7 +62,7 @@
             <div class="row gx-5 gy-5">
                 <div class="col-lg-6  col-sm-12">
                     <div class="card" style="width: 400px;">
-                        <img src="Frame 1c.png" class="card-img-top" alt="===">
+                        <img src="../images/Frame 1c.png" class="card-img-top" alt="===">
                         <div class="card-body">
                             <h5 class="card-title">C Language</h5>
                             <p class="card-text">C is a general-purpose, procedural computer
@@ -78,7 +78,7 @@
 
                 <div class="col-lg-6 col-sm-12">
                     <div class="card" style="width: 400px;">
-                        <img src="Frame 1c++.png" class="card-img-top" alt="===">
+                        <img src="../images/Frame 1c++.png" class="card-img-top" alt="===">
                         <div class="card-body">
                             <h5 class="card-title">C++ Language</h5>
                             <p class="card-text"></p> C++ is a cross-platform language that can be used to create
@@ -96,7 +96,7 @@
                 <div class="col-lg-6  col-sm-12">
                     <div class="card" style="width: 400px;">
 
-                        <img src="Frame 1java.png" class="card-img-top" alt="===">
+                        <img src="../images/Frame 1java.png" class="card-img-top" alt="===">
                         <div class="card-body">
                             <h5 class="card-title">Java Language</h5>
                             <p class="card-text">Java is a powerful general-purpose programming language. It is used to
@@ -112,7 +112,7 @@
 
                 <div class="col-lg-6 col-sm-12">
                     <div class="card" style="width: 400px;">
-                        <img src="Frame 1html5.png" class="card-img-top" alt="===">
+                        <img src="../images/Frame 1html5.png" class="card-img-top" alt="===">
                         <div class="card-body">
                             <h5 class="card-title">HTML Language</h5>
                             <p class="card-text">HTML stands for Hyper Text Markup Language. HTML is the standard markup
