created footer and index.js updates

--- a/Quiz_App/html/index.html
+++ b/Quiz_App/html/index.html
@@ -18,8 +18,9 @@
         <nav class="navbar">
 
         </nav>
-        <section>
+        <section class="row">
 
         </section>
+        <footer></footer>
     </body>
 </html>
