--- a/Quiz_App/html/header.html
+++ b/Quiz_App/html/header.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>header</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -18,7 +19,7 @@
 
         <img src="../images/header_logo.png" class="justify-content-start logo">
         <span class="display-6 text-center dashboard">Dashboard</span>
-        <button class="btn btn-outline-primary logout justify-content-end" type="submit"><i class="fas fa-sign-out-alt"></i>logout</button>
+        <button class="btn btn-dark logout justify-content-end" type="submit"><i class="fas fa-sign-out-alt"></i></button>
 
 
     </header>
