--- a/Quiz_App/html/adminLogin.html
+++ b/Quiz_App/html/adminLogin.html
@@ -17,7 +17,8 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../css/admin.css" />
+    <link rel="stylesheet" href="../css/adminLogin.css" />
+
   </head>
 
   <body>
