--- a/src/html/quiz_home.html
+++ b/src/html/quiz_home.html
@@ -1,45 +1,48 @@
 <html>
   <head>
-   
+    <link rel="stylesheet" type="text/css" href="../css/quiz_home.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../css/quiz_home.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../js/quizhome.js"></script>
-    <title>JS Quiz</title>
+    <script src="../js/quiz_home.js"></script>
+    <title>Quiz</title>
   </head>
   <body>
-    <div class="quizContainer container-fluid well well-lg">
-      <div id="quiz1" class="text-center">
-        <!--	<center><img class="img-responsive" height="180" width="180" src="http://res.cloudinary.com/dwjej2tbp/image/upload/v1523002021/KGCAS_SK_eyehy9.jpg"></center>-->
-        <h4
-          style="color: #ff0000; position: absolute; left: 70%; top: 5%"
-          align="center"
-        >
-          <span id="iTimeShow">Time Remaining: </span><br /><span
-            id="timer"
-            style="font-size: 25px"
-          ></span>
-        </h4>
-        <h1>Quiz</h1>
+    <div class="wrapper">
+      <div class="row">
+        <div class="col-sm-9">
+          <div class="quizContainer container-fluid well well-lg">
+            <div id="quiz1" class="text-center">
+              <!--	<center><img class="img-responsive" height="180" width="180" src="http://res.cloudinary.com/dwjej2tbp/image/upload/v1523002021/KGCAS_SK_eyehy9.jpg"></center>-->
+              <h4>
+                <div class="quiz-timer">
+                  <span id="iTimeShow"></span><br /><span id="timer"></span>
+                </div>
+              </h4>
+              <h1>QUIZ</h1>
+            </div>
+
+            <div class="question"></div>
+            <ul class="choiceList"></ul>
+            <br />
+            <div class="result"></div>
+            <button class="preButton">Previous</button>
+            <button class="flag">flag</button>
+            <button class="nextButton">Next</b  utton>
+          </div>
+        </div>
+        <div class="col-sm-3 btns"><div class="questionNav"></div></div>
       </div>
 
-      <div class="question"></div>
-      <ul class="choiceList"></ul>
-      <br />
-      <div class="result"></div>
-      <button class="preButton">Previous Question</button>
-      <button class="nextButton">Next Question</button>
+      <button id="GK">C++</button>
+      <button id="C">C</button>
+      <div><button id="submit">Submit</button></div>
     </div>
-    <div class="questionNav"></div>
-    <button id="CPP">C++</button>
-    <button id="C">C</button>
-    <button id="submit">Submit</button>
 
     <div class="main"></div>
   </body>
