--- a/src/html/user_login.html
+++ b/src/html/user_login.html
@@ -3,14 +3,14 @@
 <html>
 
 <head>
-    <title>Quiz Login</title>
+    <title>User Login</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../design_files/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
@@ -24,11 +24,11 @@
     <div class="wrapper">
         <div class="inner">
             <div class="image-holder">
-                <img src="../design_files/images/login.png">
+                <img src="../images/login.png">
             </div>
 
             <form action="">
-                <h3>Log In</h3>
+                <h3>User Log In</h3>
                 <div class="form-wrapper">
                     <input id="email" placeholder="Enter Email" type="email" class="form-control">
                 </div>
