--- a/src/html/admin_login.html
+++ b/src/html/admin_login.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Document</title>
 
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="../css/adminLogin.css" />
+<html>
 
-  </head>
+<head>
+    <title>Admin Login</title>
 
-  <body>
-    <h2>Admin Login</h2>
-    <div class="container">
-      <form>
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="username">Username</label>
-          <div class="col-sm-10">
-            <input
-              type="text"
-              class="form-control"
-              id="username"
-              placeholder="Enter Username"
-              name="username"
-              required
-            />
-          </div>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="../css/style.css">
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
+    <script src="../js/login.js"></script>
+
+</head>
+
+<body>
+    <div class="wrapper">
+        <div class="inner">
+            <div class="image-holder">
+                <img src="../images/login.png">
+            </div>
+
+            <form action="">
+                <h3> Admin Log In</h3>
+                <div class="form-wrapper">
+                    <input id="email" placeholder="Enter Email" type="email" class="form-control">
+                </div>
+                <div class="form-wrapper">
+                    <input id="password" type="password" placeholder="Enter Password" class="form-control">
+                </div>
+
+                <div class="form-group container-login100-form-btn">
+                    <button onclick="login()" type="button">
+                        Login
+                    </button>
+                </div>
+                <div>
+                    <div class="w-full text-center p-t-27 p-b-239"></div>
+                    <span class="text-muted">
+                        Forget
+                    </span>
+                    <a href="../html/forgetPassword.html" class="text-dark">
+                        Forget Password?
+                    </a>
+                </div>
+
+                <div>
+                    <a href="../html/signup.html" class="text-dark" style="margin-top: 66%; font-size: 15px">
+                        Not Have an Account? Sign up Now
+                    </a>
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-          <label class="control-label col-sm-2" for="question">Password</label>
-          <div class="col-sm-10">
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              placeholder="Enter Password"
-              name="password"
-              required
-            />
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Login</button>
-          </div>
-        </div>
-      </form>
     </div>
 
-    <script src="../js/admin.js"></script>
-  </body>
+
+</body>
+
 </html>
