--- a/src/html/user_login.html
+++ b/src/html/user_login.html
@@ -16,7 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
-    <script src="../js/login.js"></script>
+    <script src="../js/user_login_register.js"></script>
 
 </head>
 
