--- a/src/html/user_navbar.html
+++ b/src/html/user_navbar.html
@@ -3,7 +3,7 @@
         <script defer src="../lib/jquery-3.5.1.js"></script>
         <script defer src="../lib/bootstrap-5.0.0-beta1-dist/js/bootstrap.js"></script>
         <link rel="stylesheet" href="../lib/bootstrap-5.0.0-beta1-dist/css/bootstrap.css">
-        <link rel="stylesheet" href="../css/nav_bar.css">
+        <link rel="stylesheet" href="../css/user_navbar.css">
     </head>
     <body>
         <nav class="nav_bar">
