--- a/src/html/user_dashboard.html
+++ b/src/html/user_dashboard.html
@@ -2,8 +2,8 @@
     <head>
         <title>User Dashboard</title>
         <script defer src="../lib/jquery-3.5.1.js"></script>
-        <script defer src="../js/index.js"></script>
-        <link rel="stylesheet" href="../css/index.css">
+        <script defer src="../js/user_dashboard.js"></script>
+        <link rel="stylesheet" href="../css/user_dashboard.css">
     </head>
     <body>
         <header class="header">
