--- a/src/html/user_register.html
+++ b/src/html/user_register.html
@@ -6,17 +6,16 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
 
-    <link rel="stylesheet" href="../design_files/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-storage.js"></script>
-    <script src="../js/login.js"></script>
+    <script src="../js/user_login_register.js"></script>
 
 </head>
 
@@ -24,7 +23,7 @@
     <div class="wrapper" )>
         <div class="inner">
             <div class="image-holder">
-                <img src="../design_files/images/login.png">
+                <img src="../images/login.png">
             </div>
 
             <form action="">
