--- a/index.html
+++ b/index.html
@@ -13,21 +13,26 @@
 <body>
                                   <!-------------------Navbar login signup---------------------->
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light navtheme">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+                <li>
+                   <img src="/src/images/main_logos.png" class="gotlogo">
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a href="src/html/admin_login.html" class="nav-link"> <i class="fa fa-fw fa-user"></i>Admin Login</a>
+                    <button><a href="src/html/admin_login.html" class="nav-link"> <i class="fa fa-fw fa-user"></i>Admin Login</a></button>
                 </li>
                 <li class="nav-item">
-                    <a href="src/html/user_login.html" class="nav-link"><i class="fa fa-fw fa-user"></i>User Login</a> 
+                    <button><a href="src/html/user_login.html" class="nav-link"><i class="fa fa-fw fa-user"></i>User Login</a> </button>
                 </li>
                 <li class="nav-item">
-                    <a href="src/html/user_register.html" class="nav-link"><i class="fa fa-fw fa-user-plus"></i>Register User</a> 
+                    <button><a href="src/html/user_register.html" class="nav-link"><i class="fa fa-fw fa-user-plus"></i>Register User</a> </button>
                 </li>
             </ul>
         </div>
@@ -38,8 +43,11 @@
         <div class="jumbotron">
             <div class="row">
                 <div class="col-md-6 col-lg-6">
-                    <span class="badge bg-secondary" style="font-size:1.5rem;">ABOUT US</span>
-                        <p class="lead">This application is developed for
+                    <span class="badge badge" style="background-color:cyan; font-size:1.5rem; padding-top: 2px;">ABOUT US</span>
+                    <br> 
+                    <br>      
+                 
+                    <p class="lead">This application is developed for
                             educational purpose, allowing the users to prepare
                             the multiple choice questions for different
                             examinations conducted on provincial and national
@@ -54,7 +62,7 @@
                         </p>    
                 </div>
                 <div class="mainlogo logo col-md-6 col-lg-6">
-                    <img src="src/images/logo1.jpg" id="img1" >
+                    <iframe src="https://giphy.com/embed/xTiN0IuPQxRqzxodZm" width="480" height="320" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></a></p>
                 </div>   
             </div>     
         </div>
@@ -64,7 +72,7 @@
         <div class="row">
             <div class="logos col-md-6 col-lg-4 col-xl-3">
                 <div class="hovereffect">
-                    <img src="src/images/Clogo.jfif" >
+                    <img src="src/images/pic.png" >
                         <div class="overlay">
                            <div class="text"></div>
                         </div>
@@ -72,7 +80,7 @@
             </div>
             <div class="logos col-md-6 col-lg-4 col-xl-3">
                 <div class="hovereffect">
-                     <img src="src/images/C++logo.png" >
+                     <img src="src/images/c++.png" >
                         <div class="overlay">
                            <div class="text"></div>
                         </div>
@@ -80,7 +88,7 @@
             </div>
             <div class="logos col-md-6 col-lg-4 col-xl-3">
                 <div class="hovereffect">
-                   <img src="src/images/javalogo.png" >
+                   <img src="src/images/java.png" >
                        <div class="overlay">
                            <div class="text"></div>
                        </div>
@@ -88,7 +96,7 @@
             </div>
             <div class="logos col-md-6 col-lg-4 col-xl-3">
                 <div class="hovereffect">
-                   <img src="src/images/pythonlogo.png">
+                   <img src="src/images/python.png">
                        <div class="overlay">
                           <div class="text"></div>
                        </div>
