--- a/src/html/quiz_home.html
+++ b/src/html/quiz_home.html
@@ -31,16 +31,13 @@
             <ul class="choiceList"></ul>
             <br />
             <div class="result"></div>
-            <button class="preButton">Previous</button>
-            <button class="flag">flag</button>
+            <button class="preButton">Prev</button>
+            <button class="flag">Flag</button>
             <button class="nextButton">Next</b  utton>
           </div>
         </div>
         <div class="col-sm-3 btns"><div class="questionNav"></div></div>
       </div>
-
-      <button id="GK">C++</button>
-      <button id="C">C</button>
       <div><button id="submit">Submit</button></div>
     </div>
 
