--- a/src/html/admin_dashboard.html
+++ b/src/html/admin_dashboard.html
@@ -3,29 +3,104 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/admin_dashboard.css"/>
+
     <script defer src="../js/admin_dashboard.js"></script>
-    <script src="../lib/jquery-3.5.1.js"></script>
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="../css/admin_dashboard.css" />
     <title>Admin Dashboard</title>
   </head>
- 
+
   <body>
     <header>
       <h1><span class="badge bg-secondary">Admin Dashboard</span></h1>
     </header>
     <nav class="nav_bar">
       <ul class="nav flex-column">
-        <a href="admin_profile.html" class="nav-item btn btn-info" id="profile">Profile</a>
+        <a href="admin_profile.html" class="nav-item btn btn-info" id="profile"
+          >Profile</a
+        >
         <button class="nav-item btn btn-info">Most Attempted Test</button>
         <button class="nav-item btn btn-info">Log Out</button>
       </ul>
     </nav>
     <section class="container-fluid">
       <div class="section row"></div>
-        <div class="category-button" id="category-button">
-            <a href="one.html" class="btn btn-warning">Add new Test Category</a>
-          </div>  
-      </div>
+      <!-- <div class="category-button" id="category-button">
+        <a class="btn btn-warning" data-toggle="modal" data-target="#addCat"
+          >Add new Category</a
+        >
+      </div> -->
     </section>
+
+    <!-- Modal to add new category -->
+    <div class="modal" id="addCat" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add Category</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-sm-4">Category Name :</div>
+                <div class="col-sm-4">
+                  <input type="text" id="categoryName" />
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-sm-4">Image Url :</div>
+                <div class="col-sm-4">
+                  <input type="text" id="categoryUrl" /><br />
+                </div>
+              </div>
+            </div>
+            <form action=""></form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" id="addCategory">
+              Add
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../lib/jquery-3.5.1.js"></script>
   </body>
 </html>
