change in user_dashboard and getting upto date with g5

--- a/src/html/user_navbar.html
+++ b/src/html/user_navbar.html
@@ -14,7 +14,7 @@
                 <button class="nav-item btn btn-light" id="profile">
                  Profile
                 </button>
-                <button class="nav-item btn btn-light">
+                <button class="nav-item btn btn-light" id="performance">
                  Past Performance
                 </button>
               </ul>
