--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li>
-                   <img src="/src/images/main_logos.png" class="gotlogo">
+                   <img src="/src/images/main_lo.png" class="gotlogo">
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
