login session storage and log out functionality

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
+    <script src="../js/user_login_register.js"></script>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- <link rel="stylesheet" href="../css/header.css"> -->
 
@@ -19,7 +20,7 @@
 
         <img src="../images/header_logo.png" class="justify-content-start logo">
         <span class="display-6 text-center dashboard">Dashboard</span>
-        <button class="btn btn-dark logout justify-content-end" type="submit"><i class="fas fa-sign-out-alt"></i></button>
+        <button class="logout_button btn-dark logout justify-content-end" onclick="logout()"  type="submit"><i class="fas fa-sign-out-alt"></i></button>
 
 
     </header>
