--- a/src/html/user_login.html
+++ b/src/html/user_login.html
@@ -15,6 +15,10 @@
 
 <body>
 
+  <div>
+    <img src="https://img.icons8.com/color/48/000000/circled-user-male-skin-type-5--v2.png"/>
+  </div>
+
     <h2>Login Here</h2><br>    
     <div class="login">    
     <form id="login" >    
@@ -29,6 +33,7 @@
         </label>    
         <input type="password" class="form-control" placeholder="Password" required id="pass1"
         pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$">
+        <br>
 
          <button type="submit" id="but1" class="btn btn-primary btn-block">Login</button>
 
