--- a/src/html/admin_dashboard.html
+++ b/src/html/admin_dashboard.html
@@ -6,33 +6,38 @@
 
     <script defer src="../js/admin_dashboard.js"></script>
 
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
     <link rel="stylesheet" href="../css/admin_dashboard.css" />
     <title>Admin Dashboard</title>
   </head>
 
   <body>
     <header>
-      <h1><span class="badge bg-secondary">Admin Dashboard</span></h1>
+      <h1><span class="badge bg-light">Admin Dashboard</span></h1>
     </header>
+
+    <!-- Section for Navbar -->
     <nav class="nav_bar">
       <ul class="nav flex-column">
-        <a href="admin_profile.html" class="nav-item btn btn-info" id="profile"
-          >Profile</a
-        >
+        <a href="admin_profile.html" class="nav-item btn btn-info" id="profile">Profile</a>
         <button class="nav-item btn btn-info">Most Attempted Test</button>
         <button class="nav-item btn btn-info">Log Out</button>
       </ul>
     </nav>
+
+
     <section class="container-fluid">
       <div class="section row"></div>
       <!-- <div class="category-button" id="category-button">
